# sql-to-db-diagram

./: LICENSE  README.md  pyproject.toml
db_diagram/: __init__.py  cli.py  models.py
db_diagram/generators/: __init__.py  drawio.py  miro.py
db_diagram/layout/: __init__.py  networkx_layout.py
db_diagram/parsers/: __init__.py  postgresql.py
examples/: complex_output.drawio  complex_schema.sql  sample.drawio  sample.sql
tests/: test_layout.py  test_miro_generator.py  test_models.py  test_postgresql_parser.py
