[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-diagram"
version = "0.1.0"
description = "Convert SQL schemas to editable diagrams (Draw.io, SVG, Miro)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=26.0.0",
    "networkx>=3.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
db-diagram = "db_diagram.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
]
